--- a/Risk/src/ui/Map.fxml
+++ b/Risk/src/ui/Map.fxml
@@ -46,7 +46,7 @@
 					<Label layoutX="24.0" layoutY="50.0" text="Choose Map" />
 					<TextField fx:id="mapPathGameTF" layoutX="97.0" layoutY="46.0" prefHeight="22.0" prefWidth="159.0" promptText="map file path" />
 					<Button fx:id="chooseGameButton" layoutX="270.0" layoutY="46.0" mnemonicParsing="false" onAction="#chooseMapToPlayGame" prefHeight="22.0" prefWidth="75.0" text="Choose..." />
-					<Button fx:id="startGameButton" layoutX="270.0" layoutY="88.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="75.0" text="Start Game" />
+					<Button fx:id="startGameButton" layoutX="270.0" layoutY="88.0" mnemonicParsing="false" onAction="#startGame" prefHeight="22.0" prefWidth="75.0" text="Start Game" />
 					<Label fx:id="errorLabelGame" alignment="CENTER" contentDisplay="CENTER" layoutX="24.0" layoutY="110.0" prefHeight="14.0" prefWidth="214.0" textFill="#ff0404" />
 				</AnchorPane>
 			</SplitPane>
