--- a/Risk/src/ui/Game.fxml
+++ b/Risk/src/ui/Game.fxml
@@ -4,13 +4,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="578.0" prefWidth="964.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GameController">
@@ -36,48 +36,57 @@
       <VBox layoutX="725.0" layoutY="1.0" prefHeight="578.0" prefWidth="239.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane fx:id="phaseViewUI" minHeight="-Infinity" minWidth="-Infinity" prefHeight="121.0" prefWidth="237.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS" />
-            <AnchorPane fx:id="reinfoPhaseUI" prefHeight="138.0" prefWidth="239.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS">
+            <AnchorPane fx:id="reinfoPhaseUI" prefHeight="119.0" prefWidth="239.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets top="2.0" />
                </VBox.margin>
                <children>
-                  <Label fx:id="startUpAndReinforcementId" alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="11.0" prefHeight="14.0" prefWidth="141.0" text="StartUp Phase" textAlignment="CENTER" underline="true" AnchorPane.leftAnchor="66.0" AnchorPane.rightAnchor="66.0" />
-                  <Label layoutX="14.0" layoutY="38.0" text="Total Armies :" />
-                  <Label fx:id="playerArmies" layoutX="107.0" layoutY="38.0" />
-                  <Label layoutX="14.0" layoutY="57.0" text="Territories" />
-                  <TextField fx:id="numberOfArmiesPerTerritory" layoutX="139.0" layoutY="76.0" prefHeight="22.0" prefWidth="84.0" promptText="No. of armies" />
-                  <ComboBox fx:id="playerTerritoryList" layoutX="14.0" layoutY="76.0" prefHeight="22.0" prefWidth="103.0" />
-                  <Button fx:id="addArmies" layoutX="143.0" layoutY="109.0" mnemonicParsing="false" onAction="#addReinforcement" prefHeight="22.0" prefWidth="76.0" text="Add" />
+                  <Label fx:id="startUpAndReinforcementId" alignment="CENTER" contentDisplay="CENTER" layoutX="45.0" layoutY="5.0" prefHeight="14.0" prefWidth="156.0" text="StartUp Phase" textAlignment="CENTER" underline="true" AnchorPane.leftAnchor="44.0" AnchorPane.rightAnchor="39.0" />
+                  <Label layoutX="14.0" layoutY="25.0" text="Total Armies :" />
+                  <Label fx:id="playerArmies" layoutX="107.0" layoutY="25.0" />
+                  <Label layoutX="14.0" layoutY="44.0" text="Territories" />
+                  <TextField fx:id="numberOfArmiesPerTerritory" layoutX="139.0" layoutY="65.0" prefHeight="22.0" prefWidth="84.0" promptText="No. of armies" />
+                  <ComboBox fx:id="playerTerritoryList" layoutX="14.0" layoutY="65.0" prefHeight="22.0" prefWidth="103.0" />
+                  <Button fx:id="addArmies" layoutX="139.0" layoutY="94.0" mnemonicParsing="false" onAction="#addReinforcement" prefHeight="22.0" prefWidth="84.0" text="Add" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="attackPhaseUI" prefHeight="129.0" prefWidth="239.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS">
+            <AnchorPane fx:id="attackPhaseUI" prefHeight="152.0" prefWidth="239.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets top="2.0" />
                </VBox.margin>
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="39.0" prefHeight="14.0" prefWidth="103.0" text="Attacker" textAlignment="CENTER" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="11.0" prefHeight="14.0" prefWidth="141.0" text="Attack Phase" textAlignment="CENTER" underline="true" AnchorPane.leftAnchor="58.0" AnchorPane.rightAnchor="62.0" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="124.0" layoutY="39.0" prefHeight="14.0" prefWidth="103.0" text="Defender" textAlignment="CENTER" />
-                  <ComboBox fx:id="attackAttackerCB" layoutX="12.0" layoutY="57.0" onAction="#updateDefenderTerritories" prefHeight="22.0" prefWidth="103.0" />
-                  <ComboBox fx:id="attackDefenderCB" layoutX="124.0" layoutY="57.0" prefHeight="22.0" prefWidth="103.0" />
-                  <Button fx:id="attackButton" layoutX="97.0" layoutY="93.0" mnemonicParsing="false" onAction="#attack" text="Attack" />
-                  <Button fx:id="attackFinishButton" layoutX="148.0" layoutY="93.0" mnemonicParsing="false" onAction="#finishAttack" text="Finish Phase" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="25.0" prefHeight="14.0" prefWidth="103.0" text="Attacker" textAlignment="CENTER" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="5.0" prefHeight="14.0" prefWidth="141.0" text="Attack Phase" textAlignment="CENTER" underline="true" AnchorPane.leftAnchor="58.0" AnchorPane.rightAnchor="62.0" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="124.0" layoutY="25.0" prefHeight="14.0" prefWidth="103.0" text="Defender" textAlignment="CENTER" />
+                  <ComboBox fx:id="attackAttackerCB" layoutX="12.0" layoutY="43.0" onAction="#updateDefenderTerritories" prefHeight="22.0" prefWidth="103.0" />
+                  <ComboBox fx:id="attackDefenderCB" layoutX="124.0" layoutY="43.0" prefHeight="22.0" prefWidth="103.0" />
+                  <Button fx:id="attackButton" layoutX="97.0" layoutY="129.0" mnemonicParsing="false" onAction="#attack" text="Attack" />
+                  <Button fx:id="attackFinishButton" layoutX="148.0" layoutY="129.0" mnemonicParsing="false" onAction="#finishAttack" text="Finish Phase" />
+                  <Label layoutX="23.0" layoutY="73.0" text="Attack Mode" />
+                  <RadioButton fx:id="allOutModeRB" layoutX="107.0" layoutY="73.0" mnemonicParsing="false" selected="true" text="All Out">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="attackMode" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton fx:id="normalModeRB" layoutX="170.0" layoutY="73.0" mnemonicParsing="false" text="Normal" toggleGroup="$attackMode" />
+                  <TextField fx:id="attackerTotalDiceTF" layoutX="13.0" layoutY="98.0" prefHeight="22.0" prefWidth="101.0" promptText="total attacker dice" />
+                  <TextField fx:id="defenderTotalDiceTF" layoutX="123.0" layoutY="98.0" prefHeight="22.0" prefWidth="101.0" promptText="total defender dice" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="fortiPhaseUI" prefHeight="160.0" prefWidth="239.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS">
+            <AnchorPane fx:id="fortiPhaseUI" prefHeight="128.0" prefWidth="239.0" style="-fx-border-color: black;" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets top="2.0" />
                </VBox.margin>
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="11.0" prefHeight="14.0" prefWidth="141.0" text="Fortification Phase" textAlignment="CENTER" underline="true" AnchorPane.leftAnchor="66.0" AnchorPane.rightAnchor="67.0" />
-                  <Label layoutX="11.0" layoutY="45.0" prefHeight="22.0" text="From Territory" />
-                  <ComboBox fx:id="fortifyFromTerritoryCB" layoutX="11.0" layoutY="68.0" onAction="#updateFortifiableTerritories" prefHeight="22.0" prefWidth="103.0" />
-                  <ComboBox fx:id="fortifyToTerritoryCB" layoutX="123.0" layoutY="68.0" prefHeight="22.0" prefWidth="103.0" />
-                  <Label layoutX="123.0" layoutY="45.0" prefHeight="22.0" text="To Territory" />
-                  <Button fx:id="fortifyMoveButton" layoutX="103.0" layoutY="129.0" mnemonicParsing="false" onAction="#doFortification" text="Move" />
-                  <Button fx:id="fortifyFinishButton" layoutX="149.0" layoutY="129.0" mnemonicParsing="false" onAction="#finishFortification" text="Finish Phase" />
-                  <Label layoutX="11.0" layoutY="95.0" prefHeight="22.0" text="Armies to move :" />
-                  <TextField fx:id="armiesNoToFortify" layoutX="123.0" layoutY="96.0" prefHeight="22.0" prefWidth="103.0" promptText="No. of armies" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="5.0" prefHeight="14.0" prefWidth="141.0" text="Fortification Phase" textAlignment="CENTER" underline="true" AnchorPane.leftAnchor="66.0" AnchorPane.rightAnchor="67.0" />
+                  <Label layoutX="11.0" layoutY="25.0" prefHeight="22.0" text="From Territory" />
+                  <ComboBox fx:id="fortifyFromTerritoryCB" layoutX="11.0" layoutY="48.0" onAction="#updateFortifiableTerritories" prefHeight="22.0" prefWidth="103.0" />
+                  <ComboBox fx:id="fortifyToTerritoryCB" layoutX="123.0" layoutY="48.0" prefHeight="22.0" prefWidth="103.0" />
+                  <Label layoutX="123.0" layoutY="25.0" prefHeight="22.0" text="To Territory" />
+                  <Button fx:id="fortifyMoveButton" layoutX="103.0" layoutY="109.0" mnemonicParsing="false" onAction="#doFortification" text="Move" />
+                  <Button fx:id="fortifyFinishButton" layoutX="149.0" layoutY="109.0" mnemonicParsing="false" onAction="#finishFortification" text="Finish Phase" />
+                  <Label layoutX="11.0" layoutY="75.0" prefHeight="22.0" text="Armies to move :" />
+                  <TextField fx:id="armiesNoToFortify" layoutX="123.0" layoutY="75.0" prefHeight="22.0" prefWidth="103.0" promptText="No. of armies" />
                </children>
             </AnchorPane>
          </children>
