--- a/Risk/src/ui/CardExchange.fxml
+++ b/Risk/src/ui/CardExchange.fxml
@@ -69,6 +69,11 @@
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin></Button>
+            <Button fx:id="cancel" minWidth="75.0" mnemonicParsing="false" onAction="#closeCardExchangeView" prefHeight="20.0" prefWidth="100.0" text="Cancel">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+            </Button>
          </children>
       </HBox>
    </children>
